--- a/tools/fw_protect_test.ipynb
+++ b/tools/fw_protect_test.ipynb
@@ -278,36 +278,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "usage: ipykernel_launcher.py [-h] --infile INFILE --outfile OUTFILE --version\n",
-      "                             VERSION --message MESSAGE\n",
-      "ipykernel_launcher.py: error: the following arguments are required: --infile, --outfile, --version, --message\n"
-     ]
-    },
-    {
-     "ename": "SystemExit",
-     "evalue": "2",
-     "output_type": "error",
-     "traceback": [
-      "An exception has occurred, use %tb to see the full traceback.\n",
-      "\u001b[0;31mSystemExit\u001b[0m\u001b[0;31m:\u001b[0m 2\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/opt/conda/lib/python3.7/site-packages/IPython/core/interactiveshell.py:3339: UserWarning: To exit: use 'exit', 'quit', or Ctrl-D.\n",
-      "  warn(\"To exit: use 'exit', 'quit', or Ctrl-D.\", stacklevel=1)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Firmware Bundle-and-Protect Tool\n",
@@ -466,6 +439,263 @@
     "#     #     Write firmware blob to outfile\n",
     "#     with open(outfile, 'wb+') as outfile:\n",
     "#         outfile.write()\n",
+    "\n",
+    "def decrypt(nonce_var, metadata, cipher_text, tag_var, key):\n",
+    "    try:\n",
+    "        cipher = AES.new(key, AES.MODE_GCM, nonce=nonce_var)\n",
+    "        cipher.update(metadata)\n",
+    "#         cipher.verify(tag_var)\n",
+    "        plaintext = cipher.decrypt_and_verify(cipher_text, tag_var)\n",
+    "        print(plaintext)\n",
+    "    except ValueError:\n",
+    "        print(\"AIYA\")\n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    parser = argparse.ArgumentParser(description='Firmware Update Tool')\n",
+    "    parser.add_argument(\"--infile\", help=\"Path to the firmware image to protect.\", required=True)\n",
+    "    parser.add_argument(\"--outfile\", help=\"Filename for the output firmware.\", required=True)\n",
+    "    parser.add_argument(\"--version\", help=\"Version number of this firmware.\", required=True)\n",
+    "    parser.add_argument(\"--message\", help=\"Release message for this firmware.\", required=True)\n",
+    "    args = parser.parse_args()\n",
+    "\n",
+    "    protect_firmware(infile=args.infile, outfile=args.outfile, version=int(args.version), message=args.message)\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "CHUNKS_NEEDED\n",
+      "6\n",
+      "6541\n",
+      "NEW___________________\n",
+      "16\n",
+      "b''\n",
+      "b'\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10'\n",
+      "NEW___________________\n",
+      "15\n",
+      "b'e'\n",
+      "b'e\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f\\x0f'\n",
+      "NEW___________________\n",
+      "14\n",
+      "b'ee'\n",
+      "b'ee\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e\\x0e'\n",
+      "NEW___________________\n",
+      "13\n",
+      "b'eee'\n",
+      "b'eee\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r\\r'\n",
+      "NEW___________________\n",
+      "12\n",
+      "b'eeee'\n",
+      "b'eeee\\x0c\\x0c\\x0c\\x0c\\x0c\\x0c\\x0c\\x0c\\x0c\\x0c\\x0c\\x0c'\n",
+      "NEW___________________\n",
+      "11\n",
+      "b'eeeee'\n",
+      "b'eeeee\\x0b\\x0b\\x0b\\x0b\\x0b\\x0b\\x0b\\x0b\\x0b\\x0b\\x0b'\n",
+      "NEW___________________\n",
+      "10\n",
+      "b'eeeeee'\n",
+      "b'eeeeee\\n\\n\\n\\n\\n\\n\\n\\n\\n\\n'\n",
+      "NEW___________________\n",
+      "9\n",
+      "b'eeeeeee'\n",
+      "b'eeeeeee\\t\\t\\t\\t\\t\\t\\t\\t\\t'\n",
+      "NEW___________________\n",
+      "8\n",
+      "b'eeeeeeee'\n",
+      "b'eeeeeeee\\x08\\x08\\x08\\x08\\x08\\x08\\x08\\x08'\n",
+      "NEW___________________\n",
+      "7\n",
+      "b'eeeeeeeee'\n",
+      "b'eeeeeeeee\\x07\\x07\\x07\\x07\\x07\\x07\\x07'\n",
+      "NEW___________________\n",
+      "6\n",
+      "b'eeeeeeeeee'\n",
+      "b'eeeeeeeeee\\x06\\x06\\x06\\x06\\x06\\x06'\n",
+      "NEW___________________\n",
+      "5\n",
+      "b'eeeeeeeeeee'\n",
+      "b'eeeeeeeeeee\\x05\\x05\\x05\\x05\\x05'\n",
+      "NEW___________________\n",
+      "4\n",
+      "b'eeeeeeeeeeee'\n",
+      "b'eeeeeeeeeeee\\x04\\x04\\x04\\x04'\n",
+      "NEW___________________\n",
+      "3\n",
+      "b'eeeeeeeeeeeee'\n",
+      "b'eeeeeeeeeeeee\\x03\\x03\\x03'\n",
+      "NEW___________________\n",
+      "2\n",
+      "b'eeeeeeeeeeeeee'\n",
+      "b'eeeeeeeeeeeeee\\x02\\x02'\n",
+      "NEW___________________\n",
+      "1\n",
+      "b'eeeeeeeeeeeeeee'\n",
+      "b'eeeeeeeeeeeeeee\\x01'\n",
+      "NEW___________________\n",
+      "16\n",
+      "b'eeeeeeeeeeeeeeee'\n",
+      "b'eeeeeeeeeeeeeeee\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10\\x10'\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open('test_firmware.bin', 'rb') as fp:\n",
+    "    firmware = fp.read()\n",
+    "\n",
+    "#Split firmware into 1K chunks\n",
+    "\n",
+    "chunks_needed = int(len(firmware)/CHUNK_SIZE)\n",
+    "\n",
+    "print(\"CHUNKS_NEEDED\")\n",
+    "print(chunks_needed)\n",
+    "print(len(firmware))\n",
+    "\n",
+    "chunks=list()\n",
+    "\n",
+    "for i in range(17):\n",
+    "    \n",
+    "    chunks.append(firmware[0:i])\n",
+    "\n",
+    "\n",
+    "for chunk in chunks:\n",
+    "    padded = pad(chunk, 16)\n",
+    "    print(\"NEW___________________\")\n",
+    "    print(len(padded) - len(chunk))\n",
+    "    print(chunk)\n",
+    "    print(padded)\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#LAtest fw_protect \n",
+    "\n",
+    "\"\"\"\n",
+    "Firmware Bundle-and-Protect Tool\n",
+    "\n",
+    "\"\"\"\n",
+    "import argparse\n",
+    "import struct\n",
+    "from Crypto.Cipher import AES\n",
+    "from Crypto.Random import get_random_bytes\n",
+    "from Crypto.Util.Padding import pad\n",
+    "from Crypto.Signature import pkcs1_15\n",
+    "from Crypto.Hash import SHA256\n",
+    "from Crypto.PublicKey import RSA\n",
+    "\n",
+    "\n",
+    "def protect_firmware(infile, outfile, version, message):\n",
+    "    #Define constants\n",
+    "    CHUNK_SIZE = 1024\n",
+    "    BLOCK_SIZE = 16\n",
+    "\n",
+    "    # Load firmware binary from infile\n",
+    "    with open(infile, 'rb') as fp:\n",
+    "        firmware = fp.read()\n",
+    "        \n",
+    "    #Load in Keys\n",
+    "    \n",
+    "    print(\"Firmware Size\")\n",
+    "    print(len(firmware))\n",
+    "    \n",
+    "    with open('secret_build_output.txt', 'rb') as fp:\n",
+    "        secrets = fp.read()\n",
+    "\n",
+    "    key = secrets[0:16]\n",
+    "    \n",
+    "#     print(key)\n",
+    "\n",
+    "    # Create variable to hold message\n",
+    "    msg = message.encode() + b'\\00'\n",
+    "\n",
+    "    # Pack version and size into two little-endian shorts\n",
+    "    # metadata = struct.pack('<HH', version, len(firmware))\n",
+    "\n",
+    "    #Split firmware into 1K chunks\n",
+    "\n",
+    "    chunks_needed = int(len(firmware)/CHUNK_SIZE)\n",
+    "\n",
+    "    chunks=list()\n",
+    "\n",
+    "    for i in range(chunks_needed):\n",
+    "        print(i)\n",
+    "        chunks.append(firmware[i * CHUNK_SIZE:(i + 1) * CHUNK_SIZE])\n",
+    "\n",
+    "    if(CHUNK_SIZE * (chunks_needed) - len(firmware) != 0):\n",
+    "        chunks.append(firmware[CHUNK_SIZE * (chunks_needed):])\n",
+    "        \n",
+    "    for chunk in chunks:\n",
+    "        print(len(chunk))\n",
+    "\n",
+    "    #Encrypt each chunk\n",
+    "\n",
+    "    #Initialize AES\n",
+    "\n",
+    "#     key = get_random_bytes(16) #For Testing Purposes only\n",
+    "\n",
+    "    #Encrypt each Chunk with AES\n",
+    "\n",
+    "    final_output = b'' #Final output?\n",
+    "\n",
+    "\n",
+    "    for i, chunk in enumerate(chunks):\n",
+    "\n",
+    "        #Set up AES Cipher\n",
+    "        aes_cipher = AES.new(key, AES.MODE_GCM)\n",
+    "        \n",
+    "        #Set up metadata\n",
+    "        metadata = struct.pack('<hhhh', len(firmware), version, len(chunk), i)\n",
+    "        aes_cipher.update(metadata)\n",
+    "        \n",
+    "        #padded text\n",
+    "        if(len(chunk) == CHUNK_SIZE):\n",
+    "            processed_plain = chunk\n",
+    "        else:\n",
+    "            processed_plain = pad(chunk, BLOCK_SIZE)\n",
+    "\n",
+    "        #Get Cipher Text\n",
+    "        ciphertext, tag = aes_cipher.encrypt_and_digest(processed_plain)\n",
+    "\n",
+    "        #THings for testing :D\n",
+    "    #     print(metadata)\n",
+    "    #     print(ciphertext)\n",
+    "        print(len(ciphertext))\n",
+    "    #     print(tag)\n",
+    "    #     print(len(tag))\n",
+    "\n",
+    "        #Add result to final output\n",
+    "        final_output += (metadata + aes_cipher.nonce + tag + ciphertext)\n",
+    "        print(len(final_output))\n",
+    "\n",
+    "    # Add release message\n",
+    "\n",
+    "    aes_cipher = AES.new(key, AES.MODE_GCM)\n",
+    "    #Set up metadata\n",
+    "    metadata = struct.pack('<hhhh', len(msg), version, len(firmware), -1)\n",
+    "    aes_cipher.update(metadata)\n",
+    "    #Get Cipher Text\n",
+    "    ciphertext, tag = aes_cipher.encrypt_and_digest(pad(msg, BLOCK_SIZE))\n",
+    "    final_output += (metadata + aes_cipher.nonce + tag + ciphertext)\n",
+    "\n",
+    "    #More Testing\n",
+    "    print(final_output)\n",
+    "\n",
+    "#     Write firmware blob to outfile\n",
+    "    with open(outfile, 'wb+') as outfile:\n",
+    "        outfile.write(final_output)\n",
+    "\n",
     "\n",
     "def decrypt(nonce_var, metadata, cipher_text, tag_var, key):\n",
     "    try:\n",
