ran test between protect and bl_build with rsa sign

--- a/tools/fw_protect_test.ipynb
+++ b/tools/fw_protect_test.ipynb
@@ -605,10 +605,10 @@
     "    with open(infile, 'rb') as fp:\n",
     "        firmware = fp.read()\n",
     "        \n",
-    "    #Load in Keys\n",
-    "    \n",
     "    print(\"Firmware Size\")\n",
     "    print(len(firmware))\n",
+    "        \n",
+    "    #Load in Keys\n",
     "    \n",
     "    with open('secret_build_output.txt', 'rb') as fp:\n",
     "        secrets = fp.read()\n",
@@ -660,6 +660,7 @@
     "        aes_cipher.update(metadata)\n",
     "        \n",
     "        #padded text\n",
+    "        processed_plain = b''\n",
     "        if(len(chunk) == CHUNK_SIZE):\n",
     "            processed_plain = chunk\n",
     "        else:\n",
@@ -672,7 +673,7 @@
     "    #     print(metadata)\n",
     "    #     print(ciphertext)\n",
     "        print(len(ciphertext))\n",
-    "    #     print(tag)\n",
+    "#         print(tag)\n",
     "    #     print(len(tag))\n",
     "\n",
     "        #Add result to final output\n",
@@ -693,8 +694,10 @@
     "    print(final_output)\n",
     "\n",
     "#     Write firmware blob to outfile\n",
-    "    with open(outfile, 'wb+') as outfile:\n",
+    "    with open(outfile, 'wb') as outfile:\n",
     "        outfile.write(final_output)\n",
+    "        \n",
+    "    \n",
     "\n",
     "\n",
     "def decrypt(nonce_var, metadata, cipher_text, tag_var, key):\n",
@@ -706,6 +709,179 @@
     "        print(plaintext)\n",
     "    except ValueError:\n",
     "        print(\"AIYA\")\n",
+    "        \n",
+    "    \n",
+    "\n",
+    "if __name__ == '__main__':\n",
+    "    parser = argparse.ArgumentParser(description='Firmware Update Tool')\n",
+    "    parser.add_argument(\"--infile\", help=\"Path to the firmware image to protect.\", required=True)\n",
+    "    parser.add_argument(\"--outfile\", help=\"Filename for the output firmware.\", required=True)\n",
+    "    parser.add_argument(\"--version\", help=\"Version number of this firmware.\", required=True)\n",
+    "    parser.add_argument(\"--message\", help=\"Release message for this firmware.\", required=True)\n",
+    "    args = parser.parse_args()\n",
+    "\n",
+    "    protect_firmware(infile=args.infile, outfile=args.outfile, version=int(args.version), message=args.message)\n",
+    "    \n",
+    "    \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Latest RSA Version\n",
+    "\n",
+    "\"\"\"\n",
+    "Firmware Bundle-and-Protect Tool\n",
+    "\n",
+    "\"\"\"\n",
+    "import argparse\n",
+    "import struct\n",
+    "from Crypto.Cipher import AES\n",
+    "from Crypto.Random import get_random_bytes\n",
+    "from Crypto.Util.Padding import pad\n",
+    "from Crypto.Signature import pkcs1_15\n",
+    "from Crypto.Hash import SHA256\n",
+    "from Crypto.PublicKey import RSA\n",
+    "\n",
+    "\n",
+    "def protect_firmware(infile, outfile, version, message):\n",
+    "    #Define constants\n",
+    "    CHUNK_SIZE = 1024\n",
+    "    BLOCK_SIZE = 16\n",
+    "\n",
+    "    # Load firmware binary from infile\n",
+    "    with open(infile, 'rb') as fp:\n",
+    "        firmware = fp.read()\n",
+    "        \n",
+    "    print(\"Firmware Size\")\n",
+    "    print(len(firmware))\n",
+    "        \n",
+    "    #Load in Keys\n",
+    "    \n",
+    "    with open('secret_build_output.txt', 'rb') as fp:\n",
+    "        secrets = fp.read()\n",
+    "\n",
+    "    key = secrets[0:16]\n",
+    "    rsa_key = RSA.import_key(secrets[16:])\n",
+    "    \n",
+    "    print(\"KEYS\")\n",
+    "    \n",
+    "#     print(key)\n",
+    "    print(rsa_key.size_in_bytes())\n",
+    "\n",
+    "    # Create variable to hold message\n",
+    "    msg = message.encode() + b'\\00'\n",
+    "\n",
+    "    # Pack version and size into two little-endian shorts\n",
+    "    # metadata = struct.pack('<HH', version, len(firmware))\n",
+    "\n",
+    "    #Split firmware into 1K chunks\n",
+    "\n",
+    "    chunks_needed = int(len(firmware)/CHUNK_SIZE)\n",
+    "\n",
+    "    chunks=list()\n",
+    "\n",
+    "    for i in range(chunks_needed):\n",
+    "        print(i)\n",
+    "        chunks.append(firmware[i * CHUNK_SIZE:(i + 1) * CHUNK_SIZE])\n",
+    "\n",
+    "    if(CHUNK_SIZE * (chunks_needed) - len(firmware) != 0):\n",
+    "        chunks.append(firmware[CHUNK_SIZE * (chunks_needed):])\n",
+    "        \n",
+    "    for chunk in chunks:\n",
+    "        print(len(chunk))\n",
+    "\n",
+    "    #Encrypt each chunk\n",
+    "\n",
+    "    #Initialize AES\n",
+    "\n",
+    "#     key = get_random_bytes(16) #For Testing Purposes only\n",
+    "\n",
+    "    #Encrypt each Chunk with AES\n",
+    "\n",
+    "    final_output = b'' #Final output?\n",
+    "\n",
+    "\n",
+    "    for i, chunk in enumerate(chunks):\n",
+    "\n",
+    "        #Set up AES Cipher\n",
+    "        aes_cipher = AES.new(key, AES.MODE_GCM)\n",
+    "        \n",
+    "        #Set up metadata\n",
+    "        metadata = struct.pack('<hhhh', version, len(firmware), i,  len(chunk) )\n",
+    "        aes_cipher.update(metadata)\n",
+    "        \n",
+    "        #padded text\n",
+    "        processed_plain = b''\n",
+    "        if(len(chunk) == CHUNK_SIZE):\n",
+    "            processed_plain = chunk\n",
+    "        else:\n",
+    "            processed_plain = pad(chunk, BLOCK_SIZE)\n",
+    "\n",
+    "        #Get Cipher Text\n",
+    "        ciphertext, tag = aes_cipher.encrypt_and_digest(processed_plain)\n",
+    "        \n",
+    "        #Get RSA Signature\n",
+    "        h = SHA256.new(ciphertext)\n",
+    "        signature = pkcs1_15.new(rsa_key).sign(h)\n",
+    "\n",
+    "        #THings for testing :D\n",
+    "    #     print(metadata)\n",
+    "    #     print(ciphertext)\n",
+    "#         print(len(ciphertext))\n",
+    "#         print(tag)\n",
+    "    #     print(len(tag))\n",
+    "\n",
+    "        #Add result to final output\n",
+    "        final_output += (metadata + aes_cipher.nonce + tag + signature + ciphertext)\n",
+    "        print(len(final_output))\n",
+    "\n",
+    "    # Add release message\n",
+    "\n",
+    "    aes_cipher = AES.new(key, AES.MODE_GCM)\n",
+    "    #Set up metadata\n",
+    "    metadata = struct.pack('<hhhh', version, len(firmware), -1,  len(message) )\n",
+    "    aes_cipher.update(metadata)\n",
+    "    #Get Cipher Text\n",
+    "    ciphertext, tag = aes_cipher.encrypt_and_digest(pad(msg, BLOCK_SIZE))\n",
+    "    #Get RSA Signature\n",
+    "    h = SHA256.new(ciphertext)\n",
+    "    signature = pkcs1_15.new(rsa_key).sign(h)\n",
+    "    #Final output\n",
+    "    final_output += (metadata + aes_cipher.nonce + tag + signature + ciphertext)\n",
+    "\n",
+    "    #More Testing\n",
+    "    print(final_output)\n",
+    "\n",
+    "#     Write firmware blob to outfile\n",
+    "    with open(outfile, 'wb') as outfile:\n",
+    "        outfile.write(final_output)\n",
+    "        \n",
+    "\n",
+    "def decrypt(nonce_var, metadata, cipher_text, tag_var, key):\n",
+    "    try:\n",
+    "        cipher = AES.new(key, AES.MODE_GCM, nonce=nonce_var)\n",
+    "        cipher.update(metadata)\n",
+    "#         cipher.verify(tag_var)\n",
+    "        plaintext = cipher.decrypt_and_verify(cipher_text, tag_var)\n",
+    "        print(plaintext)\n",
+    "    except ValueError:\n",
+    "        print(\"AIYA\")\n",
+    "        \n",
+    "def verify_rsa(ciphertext, key, signature):\n",
+    "    try:\n",
+    "        h = SHA256.new(ciphertext)\n",
+    "        pkcs1_15.new(key).verify(h, signature)\n",
+    "        print(\"yay\")\n",
+    "        return 1\n",
+    "    except ValueError:\n",
+    "        print(\"Fail. Wrong Value\")\n",
+    "        return 0\n",
+    "        \n",
+    "    \n",
     "\n",
     "if __name__ == '__main__':\n",
     "    parser = argparse.ArgumentParser(description='Firmware Update Tool')\n",
